--- a/index.html
+++ b/index.html
@@ -1,3 +1,1 @@
-<video src="fnaf1dublado.mp4"
-  poster="posterfnaf1.png"
-  </video>
+<video id="videojs_html5_api" class="vjs-tech" style="width: 100% !important;height: 100% !important;" preload="none" crossorigin="anonymous" tabindex="-1" src="//s-delivery41.mxdcontent.net/v/71a1a1473764c8b766a6f01351a61ff7.mp4?s=BlbCVDKSp-sHRXH2WaIaBA&amp;e=1699790941&amp;_t=1699774515"></video>
