--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-
+<video controlslist="nodownload" playsinline="" id="media-viewer-video" src="./progressive/msg-4044747247-3:5082415155623494450" style="background-image: url(&quot;blob:https://web.telegram.org/043d5cde-3dbb-4e80-8b9c-0b83304267ae&quot;);"></video>
